# GGHL-Deployment

./: .gitignore  README.md
Deploy/TensorRT/cpp/: CMakeLists.txt  main.cpp
Deploy/TensorRT/cpp/common/: OBBdet.h
TensorRT/: README.md
TensorRT/cpp/: CMakeLists.txt  main.cpp
TensorRT/cpp/common/: OBBdet.h  sampleEngines.cpp
ncnn/: CMakeLists.txt  GGHL.param  GGHL2.param  GGHL3.param  GGHL_jit.ncnn.param  GGHL_jit.pnnx.param  OBBdet.h  demo.param  demo2.param  main.cpp
